style for services section

--- a/wp-content/themes/hydratest/parts/about-section.html
+++ b/wp-content/themes/hydratest/parts/about-section.html
@@ -73,8 +73,8 @@
                 <p>Eget mi proin sed libero enim sed faucibus turpis. Nisl rhoncus mattis rhoncus urna neque viverra justo. Vivamus at augue eget arcu dictum. Ultrices gravida dictum fusce ut placerat orci. Aenean et tortor at risus viverra adipiscing at in. Mattis aliquam faucibus purus in massa. Est placerat in egestas erat imperdiet sed. Consequat semper viverra nam libero justo laoreet sit amet. Aliquam etiam erat velit scelerisque in dictum non consectetur a. Laoreet sit amet cursus sit amet. Vel eros donec ac odio tempor orci dapibus. Sem nulla pharetra diam sit amet nisl suscipit adipiscing bibendum. Leo a diam sollicitudin tempor.</p>
                 <!-- /wp:paragraph -->
     
-                <!-- wp:buttons -->
-                <div class="wp-block-buttons">
+                <!-- wp:buttons {"className":"button-100"} -->
+                <div class="wp-block-buttons button-100">
                     <!-- wp:button {"gradient":"gradient-1","width":50,"style":{"border":{"width":"0px","style":"none","radius":"100px"},"layout":{"selfStretch":"fit","flexSize":null}},"fontSize":"small"} -->
                     <div class="wp-block-button has-custom-width wp-block-button__width-50 has-custom-font-size has-small-font-size">
                         <a class="wp-block-button__link has-gradient-1-gradient-background has-background wp-element-button" style="border-style:none;border-width:0px;border-radius:100px">LET’S GET IN TOUCH</a>
@@ -82,6 +82,7 @@
                     <!-- /wp:button -->
                 </div>
                 <!-- /wp:buttons -->
+
             </div>
             <!-- /wp:column -->
 
